--- a/style.css
+++ b/style.css
@@ -1,97 +1,98 @@
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+*,
+::before,
+::after {
+  box-sizing: border-box;
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
+/*test*/
 body {
+  font-size: 21px;
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+}
+
+h1,
+h2 {
+  font-family: "Playfair Display", serif;
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: 2.9em;
+  margin-top: 0;
+  font-weight: bold;
 }
 
-#app {
-  max-width: 1280px;
+h2 {
+  margin-top: 0;
+}
+
+img {
+  width: 100%;
+}
+
+p {
+  font-family: "Roboto", sans-serif;
+  margin-bottom: 0;
+}
+
+.container {
+  width: 100%;
+  max-width: 1128px;
   margin: 0 auto;
-  padding: 2rem;
+}
+
+.section__intro {
+  background-color: #f3eed9;
+  color: #824936;
+  padding: 7em;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
+.section__intro p {
+  font-size: 0.86em;
+  font-weight: lighter;
+  text-transform: uppercase;
 }
 
-.card {
-  padding: 2em;
+.section__main {
+  padding: 5em;
 }
 
-.read-the-docs {
-  color: #888;
+.section__main h2 {
+  text-align: center;
+  color: #824936;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.section__secondary {
+  padding: 5em;
+  background-color: #222c2a;
+  color: #fff;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.section__secondary h2 {
+  color: #f3eed9;
 }
+
+.section__footer {
+  padding: 5em;
+  background-color: #824936;
+  color: #fff;
+}
+
+.section__footer h2 {
+  color: #f3eed9;
+}
+
+.section__content {
+  display: flex;
+  gap: 40px;
+  justify-content: space-between;
+}
+
+.section__text {
+  width: 50%;
+}
+
+.section__image {
+  align-self: flex-start;
+  width: 50%;
+}
+
